--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,6 @@
 
     <string name="ans_1">If Neighborlly has its own specific instructions for creating a profile, those will be available on their official website or within the app</string>
     <string name="ans_2">Keep in mind that the steps might vary depending on the specific features and design of the Neighborlly platform</string>
-    <string name="ans_3">It's important to note that the specific steps and terminology can vary from one platform to another</string>
+    <string name="ans_3">Its important to note that the specific steps and terminology can vary from one platform to another</string>
 
 </resources>
